--- a/config/conf.ini
+++ b/config/conf.ini
@@ -11,10 +11,10 @@ options = WEB
 
 [Mail]
 mail_subject = 邮件主题
-mail_server = smtp.doumi.com
-mail_from = qanotice@doumi.com
-mail_to = 349932459@qq.com,yexian@doumi.com,xukui@doumi.com,songjinhua@doumi.com,zhengna@doumi.com,maojianbin1@doumi.com,liudan@doumi.com
-mail_from_pwd = Qaceshi007+0
+mail_server = smtp.xxxx.com
+mail_from = xxxx@xxx.com
+mail_to = xxxxx@xx.com,xxxxx@xxx.com
+mail_from_pwd = xxxxxx
 
 [path]
 chrome_driver =
