--- a/config/conf.ini
+++ b/config/conf.ini
@@ -1,13 +1,14 @@
 [browserType]
-;browserName = Firefox
-browserName = Chrome
+browserName = Firefox
+;browserName = Chrome
 #browserName = IE
 
 [testServer]
 URL = https://www.baidu.com
 
 [pattern]
-options = WEB
+options = Web
+is_visible = F
 
 [Mail]
 mail_subject = 邮件主题
